tests/paczka1/fuzzy1/48707423.err
Error in line 5: de2k6c S590 96,6
Error in line 3: IzFX7 A568 48,3
Error in line 29: ilaJTzwF A370 95,7
